Changes for the DBD::Pg module

RT refers to rt.cpan.org


 - Return an empty result set instead of undef from statistics_info
   when the requested table doesn't exist and $unique_only is false.
   [Dagfinn Ilmari Mannsåker]

Version 3.10.5  (released March 23, 2020)

 - Minor adjustment for Windows build
   (RT ticket #131752)

 - Allow test suite to work on an EnterpriseDB server
   [H.Merijn Brand]
   (RT ticket #132203)

 - Fix segfault during st destroy
   [Gregory Oschwald]
   (Github pull request #66)
   (Github issue #57)

 - Improve testing for table_info()
   [Greg Sabino Mullane]
   (Github issue #67)

 - Add small warning regarding ShowErrorStatement
   (RT ticket #120268)

 - Improve UTF-8 wording in docs
   [Felipe Gasper]
   (Github pull request #65)


Version 3.10.4  (released February 3, 2020)

 - Allow localtime from Time::Piece to be used directly as a bind value again.
   This applies to all "magical" arrays.
   [Greg Sabino Mullane]
   (Github issue #63)

 - Force tests to NOT run in parallel.
   [Greg Sabino Mullane]
   (RT ticket #130834)


Version 3.10.3  (released January 20, 2020)

 - Set things cleared via PQclear to NULL as soon as possible, to remove race conditions
   [Greg Sabino Mullane]
   (RT ticket #131522)


Version 3.10.2  (released January 17, 2020)

 - Adjust tests to pass on 32-bit machines
   [Greg Sabino Mullane]
   (RT ticket #131482)


Version 3.10.1  (released January 13, 2020)

 - Prevent double-free memory errors
   [Greg Sabino Mullane]
   (RT ticket #130681)

 - Fix crash when pg_error_field is called
   [Greg Sabino Mullane]
   (RT ticket #130721)

 - Update the list of Postgres reserved words in quote.c


Version 3.10.0  (released September 3, 2019)

 - Prevent memory leak related to pg_error_field
   [Greg Sabino Mullane]
   (RT ticket #130430)

 - Fix for bug by making sure pg_error_field works properly when switching between 
     do-with-params and do-without-params.
   [Greg Sabino Mullane]